; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/asn1/extr_asn1_gen.c_ASN1_generate_nconf.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/asn1/extr_asn1_gen.c_ASN1_generate_nconf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ASN1_generate_nconf(i8* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = load i8*, i8** %4, align 8
  %11 = call i32* @ASN1_generate_v3(i8* %10, i32* null)
  store i32* %11, i32** %3, align 8
  br label %17

12:                                               ; preds = %2
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @X509V3_set_nconf(i32* %6, i32* %13)
  %15 = load i8*, i8** %4, align 8
  %16 = call i32* @ASN1_generate_v3(i8* %15, i32* %6)
  store i32* %16, i32** %3, align 8
  br label %17

17:                                               ; preds = %12, %9
  %18 = load i32*, i32** %3, align 8
  ret i32* %18
}

declare dso_local i32* @ASN1_generate_v3(i8*, i32*) #1

declare dso_local i32 @X509V3_set_nconf(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
